[metadata]
name = timeflux-dsp
description = Timeflux DSP plugin
long_description = file: README.rst
author = Raphaëlle Bertrand-Lalo
author-email = contact@timeflux.io
license = MIT
home-page = https://timeflux.io
project_urls =
    Documentation = http://doc.timeflux.io/projects/timeflux-dsp/
    Source Code = https://github.com/timeflux/timeflux_dsp
    Bug Tracker = https://github.com/timeflux/timeflux_dsp/issues
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords = timeflux, DSP

[options]
packages = find:
install_requires =
    timeflux>=0.5.3
    neurokit2
    mne

[options.extras_require]
dev =
    pytest>=5.3
    sphinx>=2.2
    sphinx_rtd_theme>=0.4
    setuptools_scm
    docinit

[docinit]
name = Timeflux DSP
parent_url = https://doc.timeflux.io
logo_url = https://github.com/timeflux/timeflux/raw/master/doc/static/img/logo.png

[build_sphinx]
warning-is-error = 1